--- a/final project/html-frame.html
+++ b/final project/html-frame.html
@@ -95,7 +95,7 @@
 <blockquote class="twitter-tweet" align="center"><p lang="ko" dir="ltr">우리는 인종차별에 반대합니다.<br>우리는 폭력에 반대합니다.<br>나, 당신, 우리 모두는 존중받을 권리가 있습니다. 함께 하겠습니다.<br><br>We stand against racial discrimination.<br>We condemn violence.<br>You, I and we all have the right to be respected. We will stand together.<a href="https://twitter.com/hashtag/BlackLivesMatter?src=hash&amp;ref_src=twsrc%5Etfw">#BlackLivesMatter</a></p>&mdash; 방탄소년단 (@BTS_twt) <a href="https://twitter.com/BTS_twt/status/1268422690336935943?ref_src=twsrc%5Etfw">June 4, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <center><div id="caption">A few days before their donation went public, BTS posted this statement on their Twitter account.</div></center>
 <br>
-<p> One In An Army started the campaign just a few days before BTS reportedly donated to Black Lives Matter, creating a card that allowed donors to split their donation between multiple organizations. </p>
+<p> One In An Army started the campaign just a few days before BTS reportedly donated to Black Lives Matter, creating a carrd - an online platform often used for fundraisers - that allowed donors to split their donation between multiple organizations. </p>
 <p> “We’ve run big projects before, but the amount of support for this project is overwhelming,” A spokesperson said at a press release. “We are so proud that ARMY have once again channeled their power for good and are making a real impact in the fight against anti-black racism.”  </p>
 
 <br>
