--- a/Resume (editorial version)/howard.html
+++ b/Resume (editorial version)/howard.html
@@ -70,8 +70,17 @@
   <div id="illustration">
   <br>
 <p> The Howard Center of Investigative Journalism is a multidisciplinary program at Phillip Merrill College of Journalism that allows students to work with news organizations in investigative projects. </p>
-<p> I started to work with the center Jan. of 2020 as a reporter for a national project that partnered with NPR. In my first semester with the center, I researched and interpreted local, municipal and state laws and court records, and interviewed city officials and relevant sources. I also worked on a long-form stand-alone story for the project.</p>
-<div class="italic"> This page will be updated once the project is published. </div>
+<p> I started to work with the center Jan. of 2020 as a reporter for a national project that partnered with six other universities - University of Oregon, Boston University, Stanford University, the University of Arkansas, the University of Florida and Arizona State University - and AP News. </p>
+<p> It was arduous, yet refreshing, experience. It was my first time working with data, court records and local, municipal and state laws. I had to interview city officials, law enforcement agents and people experiencing homelessness.</p>
+<p> And then, the COVID-19 pandemic hit. </p>
+<p> As the phase of the project wrapped up, the center had to migrate all its efforts to an online environment. I continued to report, write, edit and fact-check from home. The entire world was in a pretty difficult - and, as you are probably tired of reading, unprecendented - situation. But it all paid off. </p>
+<br>
+<blockquote class="twitter-tweet" align="center"><p lang="en" dir="ltr">I couldn&#39;t figure out a professional, cool way to say it so I&#39;ll just go with &quot;!!!!!!!!! hi nyt!!!!&quot; <a href="https://t.co/afl7esBSNI">pic.twitter.com/afl7esBSNI</a></p>&mdash; Clara Longo de Freitas (@claralfreitas) <a href="https://twitter.com/claralfreitas/status/1277683048579031040?ref_src=twsrc%5Etfw">June 29, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+<br>
+<br><p> On the 29th of June, "NOWHERE TO GO" was born, with two packages and one co-byline by me. AP News published the mainbar of the criminalization package, which was picked up by several publications across the country including The New York Times and The Washington Post.</p>
+<p>If you would like to read our story, click <a href=https://homeless.cnsmaryland.org/> here </a>.</p>
+<div class="italic"> This page will be updated. </div>
 </div>
 </body>
 
